# ft_vox

./: .gitignore  CMakeLists.txt  Makefile  bak.txt  install_deps.sh
engine/: CMakeLists.txt
engine/includes/: Engine.hpp  Renderer.hpp
engine/incs/: Camera.hpp  Engine.hpp  Renderer.hpp  Voxel.hpp  defines.hpp  voxel.hpp
engine/shaders/: fragment.glsl  vertex.glsl
engine/srcs/: Camera.cpp  Engine.cpp  Renderer.cpp  error.cpp
includes/: Engine.hpp  vertex.hpp
incs/: App.hpp  BlockSystem.hpp  Chunk.hpp  Noise.hpp  Terrain.hpp  ThreadPool.hpp  World.hpp  vertex.hpp
srcs/: App.cpp  BlockSystem.cpp  Chunk.cpp  Noise.cpp  Terrain.cpp  World.cpp  callbacks.cpp  generate_mesh.cpp  main.cpp  mapgen.cpp  user_interface.cpp
srcs/engine/: Engine.cpp  error.cpp
